syntax = "proto3";

option java_multiple_files = true;
option java_package = "pacman.proto";
option java_outer_classname = "ShirtServiceProto";

service ShirtService {
  rpc sortShirts (ShirtRequest) returns (ShirtListResponse);
  rpc sortShirtsServerSideStreaming (ShirtRequest) returns (stream ShirtResponse);
}

message ShirtRequest {
  double salesUnitsWeight = 1;
  double stockWeight = 2;
}

message ShirtResponse {
  int32 id = 1;
  string name = 2;
}

message ShirtListResponse {
  repeated ShirtResponse shirts = 1;
}